--- a/src/app/servers/server/server.component.html
+++ b/src/app/servers/server/server.component.html
@@ -1,2 +1,6 @@
 <h5>{{ server.name }}</h5>
 <p>Server status is {{ server.status }}</p>
+<hr />
+<button
+class="btn btn-primary"
+[routerLink]="['/servers', 'edit', server.id]">Edit Server</button>
