--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -4,18 +4,14 @@
       <a
         [routerLink]="['/servers', server.id]"
         class="list-group-item"
-        *ngFor="let server of servers">
+        *ngFor="let server of servers"
+        [ngClass]="{'offline': server.status == 'offline', 'online': server.status == 'online'}">
         {{ server.name }}
       </a>
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <app-edit-server></app-edit-server>
-    <hr>
-    <app-server></app-server>
-  </div>
-  <div>
-    <a routerLink="serverchild">server child</a>
+    <router-outlet></router-outlet>  
   </div>
 </div>
 
