--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,13 @@
 <h4>Welcome to Server Manager 4.0</h4>
 <p>Manage your Servers and Users.</p>
 <!-- Route programatically via button -->
-<button class="btn btn-primary" (click)="onLoadServers()">Load Servers</button>
+<div>
+    <button class="btn btn-primary" (click)="onLoadServers()">Load Servers</button>
+</div>
+
+<hr/>
+
+<div>
+    <button class="btn btn-default" (click)="login()">Login</button> &nbsp;
+    <button class="btn btn-default" (click)="logout()">Logout</button>
+</div>
